--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "nestjs-whatsapp-bot",
   "version": "1.0.0",
-  "description": "",
   "main": "dist/main.js",
   "scripts": {
-    "build": "tsc",
+    "build": "nest build",
     "start": "node dist/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch"
+  },
+  "dependencies": {
+    "@nestjs/common": "^11.1.6",
+    "@nestjs/core": "^11.1.6",
+    "@nestjs/platform-express": "^11.1.6",
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.10",
@@ -16,12 +22,5 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
     "typescript": "^5.9.2"
-  },
-  "dependencies": {
-    "@nestjs/common": "^11.1.6",
-    "@nestjs/core": "^11.1.6",
-    "@nestjs/platform-express": "^11.1.6",
-    "axios": "^1.11.0",
-    "dotenv": "^17.2.2"
   }
 }
