--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@google-cloud/speech": "^7.2.0",
     "@google/generative-ai": "^0.24.1",
     "@nestjs/common": "^11.1.6",
     "@nestjs/core": "^11.1.6",
