--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
+    "@types/qrcode": "^1.5.5",
     "typescript": "^5.9.2"
   },
   "dependencies": {
@@ -23,6 +24,7 @@
     "@nestjs/core": "^11.1.6",
     "@nestjs/platform-express": "^11.1.6",
     "axios": "^1.11.0",
-    "dotenv": "^17.2.2"
+    "dotenv": "^17.2.2",
+    "qrcode": "^1.5.4"
   }
 }
