--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.890.0",
     "@google/generative-ai": "^0.24.1",
     "@nestjs/common": "^11.1.6",
     "@nestjs/core": "^11.1.6",
     "@nestjs/platform-express": "^11.1.6",
-    "axios": "^1.11.0",
+    "axios": "^1.12.2",
     "dotenv": "^17.2.2",
+    "form-data": "^4.0.4",
     "google-auth-library": "^10.3.0",
     "googleapis": "^159.0.0",
     "pdfkit": "^0.17.2",
