--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-<<<<<<< HEAD
   "name": "newchem-whatsapp-mvp",
   "version": "1.1.0",
   "description": "MVP flujo mixto (IA + botones) para WhatsApp con OpenAI",
@@ -7,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "NODE_ENV=development node server.js"
   },
   "engines": {
     "node": ">=18.17"
@@ -15,33 +14,5 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
-=======
-  "name": "nestjs-whatsapp-bot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/main.js",
-  "scripts": {
-    "build": "tsc",
-    "start": "node dist/main.js",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^11.0.10",
-    "@nestjs/schematics": "^11.0.7",
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.3.0",
-    "typescript": "^5.9.2"
-  },
-  "dependencies": {
-    "@google-cloud/speech": "^7.2.0",
-    "@google/generative-ai": "^0.24.1",
-    "@nestjs/common": "^11.1.6",
-    "@nestjs/core": "^11.1.6",
-    "@nestjs/platform-express": "^11.1.6",
-    "axios": "^1.11.0",
-    "dotenv": "^17.2.2"
->>>>>>> d90c73ec2d804e86fd869721306fce77541d503f
   }
 }
